# delivery_dashboard

./: .gitignore  Dockerfile  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  vercel.json
assets/: style.css
dashboard_app/controler/: dashboard_callback.py  geo_location.py
dashboard_app/models/: dictionaries.py  models.py  orm_settings.py
dashboard_app/views/: main_layout.py
pages/: 01_home.py  02_deliverers_stats.py  03_restaurant_stats.py  04_new_order.py  04_new_restaurant.py  06_new_deliverer.py
