[tool.poetry]
name = "delivery-dashboard"
version = "0.1.0"
description = ""
authors = ["KatarzynaMariaElzbieta <kasia.gajc@wp.pl>"]
readme = "README.md"
#packages = [{include = "delivery_dashboard"}]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.6.2"
pandas = "^1.5.0"
SQLAlchemy = "^1.4.41"
GeoAlchemy2 = "^0.12.5"
black = "^22.8.0"
isort = "^5.10.1"
psycopg2-binary = "^2.9.3"
dash-bootstrap-components = "^1.2.1"
geopy = "^2.2.0"
dash-leaflet = "^0.1.23"
folium = "^0.13.0"
dash-iconify = "^0.1.2"
Brotli = "^1.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
